--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.25; /* más compacto */
   font-weight: 400;
 
   color-scheme: light;
@@ -27,10 +27,12 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center; /* centrar horizontalmente */
+  align-items: center; /* centrar verticalmente */
   min-width: 320px;
   min-height: 100vh;
-}
+  padding: 1rem; /* dar espacio en pantallas pequeñas */
+} 
 
 h1 {
   font-size: 3.2em;
